<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/app1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app1"

        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/app2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app2"

        android:layout_below="@+id/app1"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/app3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app3"

        android:layout_below="@+id/app2"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>